--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h2 class="header">Shaw's News</h2>
+	<header class="header"><h2>Shaw's News<h2></h2></header>
 	<div id="container">
 		<div class="latest-news-section">
 			<h3>Latest News Articles</h3>
